microservice/ytt/templates/microservice-deployment.yml
#! generate via $ ./gradlew -Penv=<env> generateK8s

#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ "{}-{}".format(data.values.name, "deployment")
  labels: #@ data.values.depl_labels
spec:
  replicas: #@ data.values.depl_replicas
  selector:
    matchLabels: #@ data.values.depl_matchLabels
  template:
    metadata:
      labels: #@ data.values.depl_template_labels
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: #@ "{}-{}".format(data.values.name, "container")
          image: #@ "{}{}".format(data.values.docker_registry, data.values.depl_container_image)
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: #@ data.values.http_container_port
